...
                style={{ flex: 1 }}
            >
                <ScrollView ref={scroll} keyboardShouldPersistTaps="handled">
                    <Line align="center" pad="4px 20px 0 20px">
                        <Input
                            maxLength={200}
                            testID="login-input"
                            onFocus={() => {
                                scroll.current.scrollTo({
                                    y: 170,
                                    animated: true
                                });
                            }}
...
                            placeholderTextColor="#6e6e6e"
                            textContentType="username"
                            autoCorrect={false}
                            autoCapitalize="none"
                        />
                        <Password
                            testID="password-input"
                            focusOn={() => {
                                scroll.current.scrollTo({
                                    y: 170,
                                    animated: true
                                });
                            }}
...
                            }
                            forgot={true}
                            ref={passwordField}
                            error={alertError}
                        />
                        <Button
                            testID="submit-button"
                            onPress={() =>
                                checkConnect(isConnected, submitLogin)
                            }
                            text={loading ? 'Acessando' : 'Acessar'}
                            type={loading ? 'disabled' : 'default'}
                        />
...
