import React from 'react';
import { createStackNavigator } from '@react-navigation/stack';

// not auth screens
import Login from '@pages/register/login';
import EmailTokenValidation from '@pages/register/email-token-validation';
import SignUpCellPhone from '@pages/register/sign-up-cellphone';
import RecoveryPassword from '@pages/register/recovery-password';
import CellPhoneValidation from '@pages/register/cellphone-token-validation';
import FirstStep from '@pages/welcome/first-step';
import SecondStep from '@pages/welcome/second-step';
...
